--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^1.7.0
+  firebase_messaging: ^10.0.8
+  flutter_local_notifications: ^8.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
