--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   firebase_core: ^1.7.0
   firebase_messaging: ^10.0.8
   flutter_local_notifications: ^8.2.0
+  cloud_functions: ^3.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
