--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   firebase_messaging: ^10.0.8
   flutter_local_notifications: ^8.2.0
   cloud_functions: ^3.0.4
+  firebase_dynamic_links: ^2.0.10
 
 
   # The following adds the Cupertino Icons font to your application.
